# flutter_new_pipe_extractor

./: .gitignore  .metadata  pubspec.yaml
android/: build.gradle
example/android/app/: build.gradle.kts
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_new_pipe_extractor.dart
lib/src/desktop/: api.dart
linux/: CMakeLists.txt  flutter_new_pipe_extractor_plugin.cc  flutter_new_pipe_extractor_plugin_private.h
linux/flutter/ephemeral/: generated_config.cmake
linux/include/flutter_new_pipe_extractor/: flutter_new_pipe_extractor_plugin.h
macos/: flutter_new_pipe_extractor.podspec
macos/Classes/: FlutterNewPipeExtractorPlugin.swift
windows/: CMakeLists.txt  flutter_new_pipe_extractor_plugin.cpp  flutter_new_pipe_extractor_plugin.h  flutter_new_pipe_extractor_plugin_c_api.cpp
windows/include/flutter_new_pipe_extractor/: flutter_new_pipe_extractor_plugin_c_api.h
windows/test/: flutter_new_pipe_extractor_plugin_test.cpp
